# RefactorIQ-Test

./: .env.example  .gitignore  README.md  pyproject.toml
src/nimbus_ops/: __init__.py  main.py
src/nimbus_ops/application/: asset_dto.py  asset_mappers.py  contract_dto.py  contract_mappers.py  dto.py  mappers.py  notification_dto.py  notification_mappers.py  ports.py
src/nimbus_ops/application/services/: asset_service.py  billing_service.py  contract_service.py  customer_service.py  inventory_service.py  notification_service.py  operational_control_tower.py  operations_facade.py  reporting_service.py  work_order_service.py
src/nimbus_ops/core/: config.py  security.py
src/nimbus_ops/domain/: __init__.py  assets.py  contracts.py  entities.py  enums.py  events.py  exceptions.py  notifications.py  policies.py  value_objects.py
src/nimbus_ops/infrastructure/: __init__.py  asset_repository.py  contract_repository.py  database.py  legacy_operations_exporter.py  notification_repository.py  repositories.py  seed.py
src/nimbus_ops/interfaces/: __init__.py
src/nimbus_ops/interfaces/api/: dependencies.py  error_handlers.py  schemas.py
src/nimbus_ops/interfaces/api/routers/: __init__.py  admin.py  assets.py  contracts.py  customers.py  health.py  inventory.py  invoices.py  notifications.py  reports.py  work_orders.py
tests/: conftest.py  test_api_edges.py  test_architecture_boundaries.py  test_dispatch_planning.py  test_domain_rules.py  test_extended_operations_api.py  test_reporting.py  test_work_order_flow.py
